Shrink to search card before framing and restore original getShapeForIndex for comparison